--- a/app/src/main/res/menu/menu_gallery.xml
+++ b/app/src/main/res/menu/menu_gallery.xml
@@ -5,7 +5,7 @@
 
     <item
         android:id="@+id/action_translate"
-        android:title="@string/action_delete"
+        android:title="@string/action_translate"
         android:orderInCategory="100"
         android:icon="@drawable/ic_translate_white_24dp"
         app:showAsAction="always" />
