--- a/app/src/main/res/menu/menu_imagepager.xml
+++ b/app/src/main/res/menu/menu_imagepager.xml
@@ -22,26 +22,30 @@
         android:title="@string/action_delete"
         android:orderInCategory="100"
         android:icon="@drawable/ic_delete_white_24dp"
-        app:showAsAction="always" />
+        app:showAsAction="always"
+        android:visible="false"/>
 
     <item
         android:id="@+id/action_tag"
         android:title="@string/action_tag"
         android:orderInCategory="100"
         android:icon="@drawable/ic_menu_tag"
-        app:showAsAction="always" />
+        app:showAsAction="always"
+        android:visible="false"/>
 
     <item
         android:id="@+id/action_share"
         android:title="@string/action_share"
         android:orderInCategory="100"
         android:icon="@drawable/ic_menu_share"
-        app:showAsAction="always" />
+        app:showAsAction="always"
+        android:visible="false"/>
 
     <item
         android:id="@+id/action_about"
         android:title="@string/action_about"
         android:orderInCategory="100"
-        app:showAsAction="never" />
+        app:showAsAction="never"
+        android:visible="false"/>
 
 </menu>
